config/gateway/gateway-plugin/gateway-plugin.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-plugins
  namespace: system
spec:
  selector:
    app: gateway-plugins
  ports:
    - name: gateway
      protocol: TCP
      port: 50052
      targetPort: 50052
    - name: profiling
      protocol: TCP
      port: 6060
      targetPort: 6060
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-plugins
  namespace: system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-plugins
  template:
    metadata:
      labels:
        app: gateway-plugins
    spec:
      containers:
        - name: gateway-plugin
          image: gateway-plugins:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: gateway
              containerPort: 50052
            - name: profiling
              containerPort: 6060
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 1
              memory: 1Gi
      serviceAccountName: aibrix-gateway-plugins
---
# this is a dummy route for incoming request to list models registered to aibrix-control-plane
# TODO (varun): check if this dummy route can be removed in future
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reserved-router-models-endpoint
  namespace: aibrix-system
spec:
  parentRefs:
    - name: aibrix-eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/models
      backendRefs:
        - name: aibrix-metadata-service
          port: 8090
---
# this is a dummy route for incoming request and,
# then request is routed to httproute using model name OR
# request is routed based on the target for that model service
# TODO (varun): check if this dummy route can be removed in future
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reserved-router
  namespace: aibrix-system
spec:
  parentRefs:
    - name: aibrix-eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/chat/completions
        - path:
            type: PathPrefix
            value: /v1/completions
      backendRefs:
        - name: aibrix-gateway-plugins
          port: 50052
